# RC-application

./: .coveragerc  .env.example  .gitignore  README.md  dada.py  pyproject.toml  report.txt  requirements.txt  test_network_imports.py  test_util.py
doc/: RC-application.patterns.drawio  brainstorm.md  pull-requests.md  requirements.md
doc/frontend/: RC-application.frontend.puml
doc/network/: RC-application.network.puml
doc/protocol/: RC-application.patterns.puml
log/: README.md
src/: __init__.py  app_config.py  app_reactor.py  app_state.py  constants.py  exceptions.py  immutable.py  main.py  multiplexing.py  output.py  parallel_operator.py  reactor.py  structs.py  util.py
src/core/: __init__.py  config.py  constants.py  exceptions.py  get_logger.py  log_compressor.py  operator.py  parallel_operator.py  reactor.py  selector.py  selector_holder.py  specs.py  structs.py  util.py
src/frontend/: __init__.py  agenda_frame.py  chat_frame.py  connection_box.py  default_right_panel.py  flet.py  history_context.py  interfaces.py  layout.py  left_panel.py  log_box.py  modal.py  modal_controller.py  open_window.py  right_panel.py  sidebar_default.py  state.py
src/network/: __init__.py  connection.py  database_link.py  identification.py  mock_connection.py  selectable.py  sock.py  transmitter.py  util.py
src/protocol/: __init__.py  constants_cmds.py  constants_resp.py  decoder.py  encoder.py  output.py  (+4 more)
tst/: README.md  __init__.py  test_decoder.py  test_encoder.py  test_formatter.py  test_immutable.py  test_output.py  test_parser.py  test_sanitizer.py  test_util.py
(+109 files in other folders)
